--- a/src/views/events.hbs
+++ b/src/views/events.hbs
@@ -32,7 +32,7 @@
                 <label for="event-date">Event Date:</label>
             </div>
             <div>
-                <input id="event-date" name="date" type="date" placeholder="Event Date"/>
+                <input id="event-date" name="Event date" type="date" placeholder="Event Date"/>
             </div>
         </div>
         <div>
